--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8762
 spring.application.name=user-service
 spring.datasource.url=jdbc:mysql://localhost:3306/example?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=admin
 
 spring.jpa.hibernate.ddl-auto=update
