--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -3,15 +3,18 @@ spring.application.name=zuul-gateway
 
 eureka.client.service-url.default-zone=http://127.0.0.1:8761/eureka
 
+# Disable accessing services using service name
+# They should only be accessed through the paths defined below.
 zuul.ignored-services=*
 
-# auth-service routes
-zuul.routes.auth-service.path=/auth/**
-zuul.routes.auth-service.service-id=auth-service
-zuul.routes.auth-service.strip-prefix=false
-zuul.routes.auth-service.sensitive-headers=Cookie,Set-Cookie
+# user-service paths
+zuul.routes.user-service.path=/auth/**
+zuul.routes.user-service.service-id=user-service
+# setting this to true bcs we don't want to include '/auth/...' in the request to the user-service
+zuul.routes.user-service.strip-prefix=true
+zuul.routes.user-service.sensitive-headers=Cookie,Set-Cookie
 
-# edge-service routes
+# edge-service paths
 zuul.routes.edge-service.path=/listings/**
 zuul.routes.edge-service.service-id=edge-service
 zuul.routes.edge-service.strip-prefix=false
