Add zuul connection timeouts

--- a/zuul-gateway/src/main/resources/application.properties
+++ b/zuul-gateway/src/main/resources/application.properties
@@ -19,3 +19,9 @@ zuul.routes.edge-service.path=/listings/**
 zuul.routes.edge-service.service-id=edge-service
 zuul.routes.edge-service.strip-prefix=false
 zuul.routes.edge-service.sensitive-headers=Cookie,Set-Cookie
+
+# timeout problem fixes
+zuul.host.connect-timeout-millis=500000000
+zuul.host.socket-timeout-millis=500000000
+ribbon.ReadTimeout=500000000
+hystrix.command.auth-service.execution.timeout.enabled=false
