--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8762
 spring.application.name=user-service
-spring.datasource.url=jdbc:mysql://localhost:3306/example?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://https://hungry-insect-56.localtunnel.me/example?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 
